# 3dMath

./: CMakeLists.txt  MathConfig.h  example.cpp  main.cpp
Vector/: CMakeLists.txt  Math.cpp  Math.h  Math3D.cpp  Math3D.h  Vector.cpp  Vector.h
tests/: CmakeLists.txt  Math_Test.cpp  math3d_tests.cpp  vector_tests.cpp
